[tool.poetry]
name = "user-post"
version = "0.1.0"
description = ""
authors = ["permitt <perovicmitar@gmail.com>"]

packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
pymongo = "^4.1.1"
pytest = "^7.1.2"
jaeger-client = "^4.8.0"
Flask-OpenTracing = "^1.1.0"
kafka-python = "^2.0.2"
Flask-Cors = "^3.0.10"
typing-extensions = "^4.2.0"
coverage = "^6.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
